Legg til csrf beskyttelse
- i tillegg en større refakrorering av fetchNative. Tatt vekk støtte for GET

Co-authored-by: Per-Christian Nielsen <per-christian.nielsen@nav.no>

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -59,6 +59,7 @@ spec:
       value: {{fiaLesetilgangGroup}}
   envFrom:
     - secret: fia-redis
+    - secret: fia-frackend
   ingresses:
   {{#each ingresses as |url|}}
      - {{url}}
