--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "1.3.3",
     "connect-redis": "6.1.3",
+    "cookie-parser": "1.4.6",
+    "csrf-csrf": "2.2.3",
     "dotenv": "16.0.3",
     "express": "4.18.2",
     "express-session": "1.17.3",
